# isere

./: .dockerignore  .gitignore  .gitmodules  BENCHMARK.md  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.worker  LICENSE  Makefile  Makefile.master  Makefile.worker  Makefile.x  PORTING.md  README.md  build.rs  isere  unittests.cmake
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  test.yml
deployments/echoer/: Makefile  echoer.c
examples/: Makefile  echo.cjs.js  echo.esm.c-E  echo.esm.js  echo.esm.so.c  handler.js  handler.js.bak
include/: FreeRTOSConfig.h  fs.h  httpd.h  ini.h  isere.h  js.h  klist.h  loader.h  logger.h  otel.h  polyfills.h  pvPortRealloc.h  rtc.h  runtime.h  server.h  tcp.h
include/libuv/: queue.h  uv.h
js/: handler.js
portable/: Makefile
portable/esp32_ethernet_kit/: platform_extras.cmake  platform_features.cmake  platform_sources.cmake  sdkconfig
portable/esp32_ethernet_kit/include/: FreeRTOSConfig.h  ethernet.h  ethernet_init.h
portable/esp32_ethernet_kit/src/: ethernet.c  ethernet_init.c  fs.c  loader.c  logger.c  platform.c  tcp.c
portable/include/: FreeRTOSConfig.h  FreeRTOS_POSIX_portable.h  lwipopts.h  platform.h
portable/include/arch/: cc.h
portable/linux/: init.cmake  link.cmake  platform_extras.cmake  platform_features.cmake  platform_sources.cmake  source.cmake
portable/linux/include/: FreeRTOSConfig.h  isere_config.h
portable/linux/src/: loader.c  logger.c  platform.c  rtc.c  tcp.c
portable/pico/: README.md  platform_extras.cmake  platform_features.cmake
portable/pico/include/: lwipopts.h  tusb_lwip_glue.h
portable/pico/src/: logger.c  platform.c  tcp.c  tusb_lwip_glue.c  usb_descriptor.c
portable/pico2/: README.md  platform_extras.cmake  platform_features.cmake  platform_sources.cmake
portable/pico2/include/: FreeRTOSConfig.h  isere_config.h  lwipopts.h  tusb_config.h
portable/pico2/src/: rtc.c  tcp.c
portable/rp2040/: README.md  init.cmake  link.cmake  platform_extras.cmake  platform_features.cmake  platform_sources.cmake  source.cmake
portable/rp2040/include/: FreeRTOSConfig.h  isere_platform.h  lwipopts.h  tusb_config.h  tusb_lwip_glue.h
portable/rp2040/include/arch/: cc.h
portable/rp2040/src/: fs.c  loader.c  logger.c  platform.c  quickjs-libc.c  rtc.c  tcp.c  tusb_lwip_glue.c  usb_descriptor.c
portable/src/: fs.c  hooks.c  httpd.c  loader.c  logger.c  server.c  sys_arch.c  tcp.c
schemas/: config.capnp  config.capnp.c  config.capnp.h
src/: hooks.c  http_handler.c  httpd.c  httpd.rs  ini.c  js.c  js.rs  log.rs  logger.c  main.c  main.rs  main_blinky.c  otel.c  quickjs-libc.c
src/internals/: poll.c  uv_poll.c
src/master/: main.c
src/polyfills/: fetch.c  pvPortRealloc.c  timer.c
src/polyfills/jerryscript/: timer.c
src/polyfills/quickjs/: fetch.c  timer.c
src/runtimes/: quickjs.c
src/runtimes/empty/: empty.c
src/runtimes/jerryscript/: jerry-common.c  jerry-port.c  jerryscript.c
src/runtimes/quickjs/: quickjs.c
src/worker/: main.c
tests/: CMakeLists.txt  js_test.cpp  loader_test.cpp  main.cpp
tests/js/: Makefile  helloworld.so.c
