[package]
name = "isere"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
env_logger = "0.10.0"
freertos-rust = "0.1.2"
httparse = "1.8.0"
libc-print = "0.1.21"
log = "0.4.20"
rquickjs = { version = "0.4.0-beta.4", features = ["loader"] }

[build-dependencies]
freertos-cargo-build = "*"
