[package]
name = "isere"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
freertos-rust = "0.1.2"
log = "0.4.20"

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.6.0"
cortex-m-rt = { version = "0.6.12" }

[target.thumbv6m-none-eabi.dependencies]
panic-halt = "0.2.0"

[build-dependencies]
freertos-cargo-build = "0.1.1"
